--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,30 @@
     <artifactId>stormtraffic</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <storm.version>1.1.1</storm.version>
+    </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-core</artifactId>
+            <version>${storm.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.storm/storm-kafka -->
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-kafka</artifactId>
+            <version>${storm.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
