--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,10 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>　　
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.3</version>
+        </dependency>
     </dependencies>
 </project>
